--- a/entrystyle.css
+++ b/entrystyle.css
@@ -4,6 +4,9 @@ body {background-color: rgb(255, 245, 170);}
         h2   {color: rgb(44, 0, 80);}
         h2   {text-align: center;}
         h2   {font-size: 290%;}
+        h3   {color: rgb(0, 0, 0);}
+        h3   {text-align: center;}
+        h3   {font-size: 240%;}
         p    {color: #000000; }
         p    {text-align: center;}
         p    {font-size: 190%;}
